Poor interaction between scroll{Width,Height} and margin collapsing
Categories
(Core :: Layout: Scrolling and Overflow, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr128 | --- | unaffected |
| firefox133 | --- | unaffected |
| firefox134 | --- | verified |
| firefox135 | --- | verified |
People
(Reporter: emilio, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
488 bytes,
text/html
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
pascalc|PTO
:
approval-mozilla-beta+
|
Details | Review |
When calling scroll{Width,Height} on an overflow: visible frame, after bug 1931490 we account for margins that have really collapsed through to our ancestor BFC. That causes us to report different client / scroll margins, which eventually end up confusing the matrix-react benchmark code (see bug 1931490 comment 14 and following).
| Assignee | ||
Comment 1•1 year ago
|
||
Ok, diagnostic and test-case in bug 1936156.
| Assignee | ||
Comment 2•1 year ago
|
||
err, obviously commented in the wrong bug :)
Comment 3•1 year ago
|
||
Set release status flags based on info from the regressing bug 1931490
| Assignee | ||
Comment 4•1 year ago
|
||
So that our client{Width,Height} and scroll{Width,Height} calculations
make sense.
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
Updated•1 year ago
|
| Assignee | ||
Comment 10•1 year ago
|
||
Comment on attachment 9442577 [details]
Bug 1936156 - Don't consider collapsed margins for in-flow line bounds if we're not a BFC. r=dshin,#layout
Beta/Release Uplift Approval Request
- User impact if declined/Reason for urgency: Needed to uplift the regressor.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Returns to pre regression behavior for a subset of cases.
- String changes made/needed: none
- Is Android affected?: Yes
| Assignee | ||
Updated•1 year ago
|
Updated•1 year ago
|
Comment 11•1 year ago
|
||
I've reproduced the issue with an affected Nightly build (2024-12-09), using the test case from comment 0.
The issue is verified as fixed on latest Nightly 135.0a1 under Win 11 x64, macOS 14 and Ubuntu 22.04. The "[not-scrollable] scroll" and "[scrollable] scroll" client values are correctly matching.
Comment on attachment 9442577 [details]
Bug 1936156 - Don't consider collapsed margins for in-flow line bounds if we're not a BFC. r=dshin,#layout
Approved for 134RC, thanks.
Comment 13•1 year ago
|
||
| uplift | ||
Comment 14•1 year ago
|
||
This is also verified as fixed on 134 RC (treeherder build), running Win 11, macOS 14 and Ubuntu 24.04
Description
•