Bug 1936156 - Don't consider collapsed margins for in-flow line bounds if we're not a BFC. r=dshin

So that our client{Width,Height} and scroll{Width,Height} calculations
make sense.

Differential Revision: https://phabricator.services.mozilla.com/D231629